@@ -36,72 +36,29 @@
 
 package com.sun.mail.dsn;
 
-import java.io.*;
-
-import javax.activation.*;
-import javax.mail.*;
-import javax.mail.internet.*;
-
 /**
- * A special MimeMessage object that contains only message headers,
- * no content.  Used to represent the MIME type text/rfc822-headers.
+ * An abstract report type, to be included in a MultipartReport.
+ * Subclasses define specific report types, such as DeliverStatus
+ * and DispositionNotification.
  *
- * @since	JavaMail 1.4
+ * @since	JavaMail 1.4.2
  */
-public class MessageHeaders extends MimeMessage {
+public abstract class Report {
+    protected String type;	// the MIME subtype of the report
 
     /**
-     * Construct a MessageHeaders object.
+     * Construct a report of the indicated MIME subtype.
+     * The primary MIME type is always "message".
      */
-    public MessageHeaders() throws MessagingException {
-	super((Session)null);
-	content = new byte[0];
-    }
-
-    /**
-     * Constructs a MessageHeaders object from the given InputStream.
-     *
-     * @param	is	InputStream
-     */
-    public MessageHeaders(InputStream is) throws MessagingException {
-	super(null, is);
-	content = new byte[0];
+    protected Report(String type) {
+	this.type = type;
     }
 
     /**
-     * Constructs a MessageHeaders object using the given InternetHeaders.
-     *
-     * @param	headers	InternetHeaders to use
+     * Get the MIME subtype of the report.
+     * The primary MIME type is always "message".
      */
-    public MessageHeaders(InternetHeaders headers) throws MessagingException {
-	super((Session)null);
-	this.headers = headers;
-	content = new byte[0];
+    public String getType() {
+	return type;
     }
-
-    /**
-     * Return the size of this message.
-     * Always returns zero.
-     */
-    public int getSize() {
-	return 0;
-    }
-
-    public InputStream getInputStream() {
-	return new ByteArrayInputStream(content);
-    }
-
-    protected InputStream getContentStream() {
-	return new ByteArrayInputStream(content);
-    }
-
-    /**
-     * Can't set any content for a MessageHeaders object.
-     *
-     * @exception	MessagingException	always
-     */
-    public void setDataHandler(DataHandler dh) throws MessagingException {
-	throw new MessagingException("Can't set content for MessageHeaders");
-    }
-
 }
